# RedisGraph

./: .gitignore  ARCHITECTURE-holy-grail.md  REVIEW-rust-graph-port.md
docs/redisgraph/: 00_PROMPT_FOR_LADYBUG_SESSION.md  02_DATAFUSION_NOT_LANCEDB.md  03_CAM_PREFIX_SOLUTION.md  06_METADATA_REVIEW.md  07_COMPRESSION_AND_RESONANCE.md  README.md
holograph/: Cargo.toml
holograph/src/: lib.rs  mindmap.rs  storage.rs
holograph/src/graphblas/: matrix.rs
src/fingerprint/rust/: Cargo.toml  FINGERPRINT_SIZING_GUIDE.md  HDR_ENCODING_REFERENCE.md  MESSAGE_IN_A_BOTTLE.md
src/fingerprint/rust/benches/: hamming_bench.rs
src/fingerprint/rust/include/: hdr_hamming.h
src/fingerprint/rust/src/: HARDENING_REVIEW.md  IMPLEMENTATION_PLAN.md  VECTOR_WIDTH.md  bitpack.rs  crystal_dejavu.rs  dn_sparse.rs  dntree.rs  epiphany.rs  ffi.rs  hamming.rs  lance_store.rs  lib.rs  mindmap.rs  navigator.rs  neural_tree.rs  nntree.rs  representation.rs  rl_ops.rs  sentence_crystal.rs  slot_encoding.rs  storage.rs  storage_transport.rs
src/fingerprint/rust/src/graphblas/: mod.rs  sparse.rs
src/fingerprint/rust/src/query/: transpiler.rs
src/fingerprint/rust/src/width_16k/: compat.rs  demo.rs  mod.rs  schema.rs  search.rs  xor_bubble.rs
src/fingerprint/rust/src/width_32k/: mod.rs
